[gd_scene load_steps=7 format=3 uid="uid://bcu8ow3jc4j84"]

[ext_resource type="Script" path="res://shadow_game/src/player.gd" id="1_0riro"]
[ext_resource type="Texture2D" uid="uid://b866sptt0aiac" path="res://shadow_game/art/alchemist.png" id="1_fwy6u"]
[ext_resource type="Texture2D" uid="uid://ckya5bd63o4sj" path="res://shadow_game/art/light.png" id="3_alpmf"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_drxnf"]
size = Vector2(14, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mfooc"]
size = Vector2(20, 33.5)

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_hm7cf"]
particle_flag_disable_z = true
spread = 180.0
initial_velocity_min = 100.0
initial_velocity_max = 300.0
gravity = Vector3(0, 0, 0)
scale_max = 10.0

[node name="Player" type="CharacterBody2D" node_paths=PackedStringArray("animation_player", "player_texture") groups=["player"]]
y_sort_enabled = true
script = ExtResource("1_0riro")
animation_player = NodePath("AnimationPlayer")
player_texture = NodePath("Sprite2D")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_fwy6u")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]

[node name="PointLight2D" type="PointLight2D" parent="."]
y_sort_enabled = true
energy = 0.2
texture = ExtResource("3_alpmf")
texture_scale = 8.0

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, 14)
shape = SubResource("RectangleShape2D_drxnf")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2(0, 0.75)
shape = SubResource("RectangleShape2D_mfooc")

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
y_sort_enabled = true
emitting = false
amount = 50
process_material = SubResource("ParticleProcessMaterial_hm7cf")
one_shot = true

[node name="flamewalk_timer" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="flamespawn_timer" type="Timer" parent="."]
wait_time = 0.3

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="timeout" from="flamewalk_timer" to="." method="_on_flamewalk_timer_timeout"]
[connection signal="timeout" from="flamespawn_timer" to="." method="_on_flamespawn_timer_timeout"]
